--- a/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -3,7 +3,7 @@
     class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3"
   >
     <div class="container">
-      <a class="navbar-brand" [routerLink]="['/']">capstone</a>
+      <a class="navbar-brand" [routerLink]="['/']">Bookalobrary</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -27,7 +27,10 @@
             <a class="nav-link text-dark" [routerLink]="['/']">Home</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/books']">Books</a>
+            <a class="nav-link text-dark" [routerLink]="['/catalog']">Catalog</a>
+          </li>
+          <li class="nav-item" [routerLinkActive]="['link-active']">
+            <a class="nav-link text-dark" [routerLink]="['/newbook']">Add a book</a>
           </li>
         </ul>
       </div>
