newBook mostly done. still needs userId

--- a/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -3,7 +3,8 @@
     class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3"
   >
     <div class="container">
-      <a class="navbar-brand" [routerLink]="['/']">Bookalobrary</a>
+      <a class="navbar-brand" [routerLink]="['/']">Bookabrary</a>
+      
       <button
         class="navbar-toggler"
         type="button"
