--- a/ClientApp/src/app/book/book.component.html
+++ b/ClientApp/src/app/book/book.component.html
@@ -50,7 +50,7 @@
 
 <div *ngFor="let b of books">
   <div *ngIf="!searching" class="card" style="width: 18rem;">
-    <div class="card-body">
+    <div class="card-body" routerLink="/{{b.id}}">
       <h5 class="card-title">{{b.title}}</h5>
       <h6 class="card-subtitle mb-2 text-muted"><a href="#">{{b.author}}</a></h6>
       <p class="card-text">{{b.notes}}</p>
