can't use ngIf when you need to use your data there later

--- a/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -3,7 +3,7 @@
     class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3"
   >
     <div class="container">
-      <a class="navbar-brand" [routerLink]="['/']">Bookabrary</a>
+      <a class="navbar-brand" [routerLink]="['/']">Bookalog</a>
       
       <button
         class="navbar-toggler"
