--- a/ClientApp/src/app/book/book.component.html
+++ b/ClientApp/src/app/book/book.component.html
@@ -4,19 +4,19 @@
 <a class="addBook" routerLink="/newbook">Add a book to the catalog</a> 
 <br/>
 
-<mat-form-field appearance="fill">
+<mat-form-field appearance="fill" color="accent">
     <mat-label>Search catalog</mat-label>
     <input (focus)="searching = true" (keyup)="applyFilter($event.target.value)" matInput>
 </mat-form-field>
 
-<mat-button-toggle-group value="all" *ngIf="searching"> 
-    <mat-button-toggle value="title">Title</mat-button-toggle>
+<mat-button-toggle-group value="all" [hidden]="!searching"> 
+    <!-- <mat-button-toggle value="title">Title</mat-button-toggle>
     <mat-button-toggle value="author">Author</mat-button-toggle>
-    <mat-button-toggle value="all">All</mat-button-toggle>
+    <mat-button-toggle value="all">All</mat-button-toggle> -->
     <mat-button-toggle (click)="cancel()">Cancel</mat-button-toggle>
 </mat-button-toggle-group>
 
-<div class="mat-elevation-z5" *ngIf="books && searching">
+<div class="mat-elevation-z5" [hidden]="!searching">
     <table mat-table [dataSource]="dataSource" matSort width="100%" >
         <ng-container matColumnDef="title">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Title </th>
@@ -25,10 +25,6 @@
         <ng-container matColumnDef="author">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Author </th>
             <td mat-cell *matCellDef="let book">{{book.author}}</td>
-        </ng-container>
-        <ng-container matColumnDef="notes">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Notes </th>
-            <td mat-cell *matCellDef="let book">{{book.notes}}</td>
         </ng-container>
         <ng-container matColumnDef="id">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Id </th>
@@ -45,11 +41,11 @@
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
-    <mat-paginator [pageSizeOptions]="[5, 15, 25]"></mat-paginator>
+    <mat-paginator [pageSizeOptions]="[3, 6, 12]" showFirstLastButtons></mat-paginator>
 </div>
 
 <div *ngFor="let b of books">
-  <div *ngIf="!searching" class="card" style="width: 18rem;">
+  <div [hidden]="searching" class="card" style="width: 18rem;">
     <div class="card-body" routerLink="/{{b.id}}">
       <h5 class="card-title">{{b.title}}</h5>
       <h6 class="card-subtitle mb-2 text-muted"><a href="#">{{b.author}}</a></h6>
