added toggle filtering, but not sure it's working correctly

--- a/ClientApp/src/app/book/book.component.html
+++ b/ClientApp/src/app/book/book.component.html
@@ -10,9 +10,9 @@
 </mat-form-field>
 
 <mat-button-toggle-group value="all" [hidden]="!searching"> 
-    <!-- <mat-button-toggle value="title">Title</mat-button-toggle>
+    <mat-button-toggle value="title">Title</mat-button-toggle>
     <mat-button-toggle value="author">Author</mat-button-toggle>
-    <mat-button-toggle value="all">All</mat-button-toggle> -->
+    <mat-button-toggle value="all">All</mat-button-toggle>
     <mat-button-toggle (click)="cancel()">Cancel</mat-button-toggle>
 </mat-button-toggle-group>
 
