--- a/ClientApp/src/styles.css
+++ b/ClientApp/src/styles.css
@@ -16,4 +16,4 @@ code {
 }
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background-color: rgb(2, 27, 51); }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background-color: rgb(2, 27, 51); color: #ffdbcd;}
