--- a/ClientApp/src/app/new-book/new-book.component.html
+++ b/ClientApp/src/app/new-book/new-book.component.html
@@ -1,16 +1,35 @@
-<div class="newBook">
-    <h3>Add a book to the catalog:</h3>
-    Title
-    <input [(ngModel)]="newBook.title" name="title" />
-    Author
-    <input [(ngModel)]="newBook.author" name="author" />
-    Type
-    <input [(ngModel)]="newBook.type" name="notes" />
-    Series
-    <input [(ngModel)]="newBook.series" name="notes" />
-    Notes
-    <input [(ngModel)]="newBook.notes" name="notes" />
-    <button (click)="save()">Save</button>
-  </div>
+<h3>Add a book to the catalog</h3>
+<div class="align-items-center">
+  <form>
+    <div class="row">
+      <div class="col">
+        <label for="title">Title</label>
+        <input class="form-control" type="text" [(ngModel)]="newBook.title" name="title" id="title" />
+      </div>
+      <div class="col">
+        <label for="author">Author</label>
+        <input class="form-control" type="text" [(ngModel)]="newBook.author" name="author" id="author" />
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <label for="series">Series</label>
+        <input class="form-control" type="text" [(ngModel)]="newBook.series" name="series" id="series" />
+      </div>
+      <div class="col">
+        <label for="type">Type</label>
+        <input class="form-control" type="text" [(ngModel)]="newBook.type" name="type" id="type"
+          placeholder="paperback, ebook, etc" />
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <label for="notes">Notes</label>
+        <textarea class="form-control" [(ngModel)]="newBook.notes" id="notes" rows="3"></textarea>
+      </div>
+    </div>
+  </form>
+</div>
+<button class="btn btn-warning" (click)="save()">Save</button>
 
-  <button routerLink="/catalog">Catalog</button>
+<button class="btn btn-info" routerLink="/catalog">Catalog</button>
