Adjusted some colors

--- a/ClientApp/src/app/book/book.component.html
+++ b/ClientApp/src/app/book/book.component.html
@@ -48,8 +48,8 @@
   <div [hidden]="searching" class="card" style="width: 18rem;">
     <div class="card-body" routerLink="/{{b.id}}">
       <h5 class="card-title">{{b.title}}</h5>
-      <h6 class="card-subtitle mb-2 text-muted"><a href="#">{{b.author}}</a></h6>
-      <a href="#" class="card-link">Series: {{b.series}}</a>
+      <h6 class="card-subtitle mb-2 text-muted">{{b.author}}</h6>
+      <h6 class="card-subtitle mb-2 text-muted">Series: {{b.series}}</h6>
     </div>
   </div>
 </div>
