Card now displays data, but not quite right

--- a/ClientApp/src/app/book/book.component.html
+++ b/ClientApp/src/app/book/book.component.html
@@ -46,7 +46,7 @@
 
 <div *ngFor="let b of books">
   <div [hidden]="searching" class="card" style="width: 18rem;">
-    <div class="card-body" routerLink="/{{b.id}}">
+    <div class="card-body" (click)="GetId(b.id)" routerLink="/{{b.id}}" routerLinkActive="active">
       <h5 class="card-title">{{b.title}}</h5>
       <h6 class="card-subtitle mb-2 text-muted">{{b.author}}</h6>
       <h6 class="card-subtitle mb-2 text-muted">Series: {{b.series}}</h6>
