fixed newBook notes not working

--- a/ClientApp/src/app/new-book/new-book.component.html
+++ b/ClientApp/src/app/new-book/new-book.component.html
@@ -25,7 +25,7 @@
     <div class="row">
       <div class="col">
         <label for="notes">Notes</label>
-        <textarea class="form-control" [(ngModel)]="newBook.notes" id="notes" rows="3"></textarea>
+        <textarea class="form-control" [(ngModel)]="newBook.notes" name="notes" id="notes" rows="3"></textarea>
       </div>
     </div>
   </form>
