--- a/ClientApp/src/app/book-view/book-view.component.html
+++ b/ClientApp/src/app/book-view/book-view.component.html
@@ -2,10 +2,12 @@
  
     <div class="card" style="width: 18rem;">
         <h5 class="card-title">{{book.title}}</h5>
-        <h6 class="card-subtitle mb-2 text-muted"><a href="#">{{book.author}}</a></h6>
+        <h6 class="card-subtitle mb-2 text-muted">{{book.author}}</h6>
         <p class="card-text">{{book.notes}}</p>
         <p class="card-text">Form: {{book.type}}</p>
         <!-- <p class="card-text">Catalog number: {{book.id}}</p> -->
-        <a href="#" class="card-link">Series: {{book.series}}</a>
-    </div>
+        <p class="card-link">Series: {{book.series}}</p>
+        <button class="btn btn-sm btn-info">Edit</button>
+        <button class="btn btn-sm btn-danger">Delete</button>
+        </div>
 
