--- a/ClientApp/src/app/new-book/new-book.component.html
+++ b/ClientApp/src/app/new-book/new-book.component.html
@@ -16,6 +16,10 @@
         <label for="series">Series</label>
         <input class="form-control" type="text" [(ngModel)]="newBook.series" name="series" id="series" />
       </div>
+      <!-- <div class="col">
+        <label for="genre">Genre</label>
+        <input class="form-control" type="text" [(ngModel)]="newBook.genre" name="genre" id="genre" />
+      </div> -->
       <div class="col">
         <label for="type">Type</label>
         <input class="form-control" type="text" [(ngModel)]="newBook.type" name="type" id="type"
