--- a/ClientApp/src/app/book-list/book-list.component.html
+++ b/ClientApp/src/app/book-list/book-list.component.html
@@ -1,7 +1,7 @@
 
 
 <div *ngFor="let b of books">
-    <div [hidden]="searching" class="card" style="width: 18rem;">
+    <div class="card" style="width: 18rem;">
        <div class="card-body">
         <h5 class="card-title">{{b.title}}</h5>
         <h6 class="card-subtitle mb-2 text-muted">{{b.author}}</h6>
