--- a/ClientApp/src/app/home/home.component.html
+++ b/ClientApp/src/app/home/home.component.html
@@ -19,15 +19,15 @@
   <div class="row">
     <div class="col-md-4">
       <h3>Reading Now</h3>
-      <app-book-list status="Reading"></app-book-list>
+      <app-book-list status="Am Reading"></app-book-list>
     </div>
     <div class="col-md-4">
       <h3>Reading Next</h3>
-      <app-book-list status="Read"></app-book-list>
+      <app-book-list status="Wanna Read"></app-book-list>
     </div>
     <div class="col-md-4">
       <h3>Wanna Buy!</h3>
-      <app-book-list status="Buy"></app-book-list>
+      <app-book-list status="Need to Buy"></app-book-list>
     </div>
   </div>
 </div>
