--- a/ClientApp/src/app/book/book.component.html
+++ b/ClientApp/src/app/book/book.component.html
@@ -32,18 +32,14 @@
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Form </th>
             <td mat-cell *matCellDef="let book">{{book.type}}</td>
         </ng-container>
+        <ng-container matColumnDef="genre">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Genre </th>
+            <td mat-cell *matCellDef="let book">{{book.genre}}</td>
+        </ng-container>
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
     <mat-paginator [pageSizeOptions]="[3, 6, 12]" showFirstLastButtons></mat-paginator>
 </div>
 
-<div *ngFor="let b of books">
-  <div [hidden]="searching" class="card" style="width: 18rem;">
-     <div class="card-body">
-      <h5 class="card-title">{{b.title}}</h5>
-      <h6 class="card-subtitle mb-2 text-muted">{{b.author}}</h6>
-      <h6 class="card-subtitle mb-2 text-muted">Series: {{b.series}}</h6>
-    </div>
-  </div>
-</div>
+<app-book-list [hidden]="searching"></app-book-list>
