--- a/ClientApp/src/app/book/book.component.html
+++ b/ClientApp/src/app/book/book.component.html
@@ -37,7 +37,7 @@
             <td mat-cell *matCellDef="let book">{{book.genre}}</td>
         </ng-container>
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="modBook()"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="modBook(book.id)"></tr>
     </table>
     <mat-paginator [pageSizeOptions]="[3, 6, 12]" showFirstLastButtons></mat-paginator>
 </div>
