--- a/ClientApp/src/app/book-view/book-view.component.html
+++ b/ClientApp/src/app/book-view/book-view.component.html
@@ -1,4 +1,4 @@
-<div class="align-items-center">
+<div class="align-items-center" padding="5%">
     <form>
       <div class="row">
         <div class="col">
@@ -40,8 +40,8 @@
     </form>
   </div>
   <button class="btn btn-warning" (click)="save()">Save Changes</button>
-  <!-- <button class="btn btn-warning" (click)="deleteBook()">Delete</button>
-  <button class="btn btn-warning" (click)="close()">Cancel</button> -->
+   <button class="btn btn-warning" (click)="deleteBook(book.id)">Delete</button>
+  <!--<button class="btn btn-warning" (click)="close()">Cancel</button> -->
 
   
  
