--- a/ClientApp/src/app/book/book.component.html
+++ b/ClientApp/src/app/book/book.component.html
@@ -42,4 +42,4 @@
     <mat-paginator [pageSizeOptions]="[3, 6, 12]" showFirstLastButtons></mat-paginator>
 </div>
 
-<app-book-list [hidden]="searching" (click)="modModal(1)"></app-book-list>
+<app-book-list [hidden]="searching" ></app-book-list>
