--- a/ClientApp/src/app/book-view/book-view.component.html
+++ b/ClientApp/src/app/book-view/book-view.component.html
@@ -3,7 +3,7 @@
       <div class="row">
         <div class="col">
           <label for="title">Title</label>
-          <input class="form-control" type="text" [(ngModel)]="book.title" name="title" id="title" />
+          <input class="form-control" type="text" [(ngModel)]="book.title" name="title" id="title" placeholder="{{this.book.title}}"/>
         </div>
         <div class="col">
           <label for="author">Author</label>
@@ -40,18 +40,18 @@
     </form>
   </div>
   <button class="btn btn-warning" (click)="save()">Save Changes</button>
-   <button class="btn btn-warning" (click)="deleteBook(book.id)">Delete</button>
+   <button class="btn btn-warning" (click)="deleteBook()">Delete</button>
   <!--<button class="btn btn-warning" (click)="close()">Cancel</button> -->
 
   
  
-    <!-- <div class="card" style="width: 18rem;">
-        <h5 class="card-title">{{book.title}}</h5>
+    <div class="card" style="width: 18rem;" >
+        <h5 class="card-title">{{this.book.title}}</h5>
         <h6 class="card-subtitle mb-2 text-muted">{{book.author}}</h6>
         <p class="card-text">{{book.notes}}</p>
         <p class="card-text">Form: {{book.type}}</p>
         <p class="card-link">Series: {{book.series}}</p>
         <button class="btn btn-sm btn-info">Edit</button>
         <button class="btn btn-sm btn-danger">Delete</button>
-    </div> -->
+    </div>
 
