--- a/ClientApp/src/app/book/book.component.html
+++ b/ClientApp/src/app/book/book.component.html
@@ -29,12 +29,22 @@
             <td mat-cell *matCellDef="let book">{{book.series}}</td>
         </ng-container>
         <ng-container matColumnDef="type">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Form </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Type </th>
             <td mat-cell *matCellDef="let book">{{book.type}}</td>
         </ng-container>
         <ng-container matColumnDef="genre">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Genre </th>
             <td mat-cell *matCellDef="let book">{{book.genre}}</td>
+        </ng-container>
+        <ng-container matColumnDef="status">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
+            <td mat-cell *matCellDef="let book">{{book.status}}</td>
+        </ng-container>
+        <ng-container matColumnDef="delete">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
+            <td mat-cell *matCellDef="let book">
+                <button class="btn btn-sm btn-danger" (click)="deleteBook(book.id)">Delete</button>
+            </td>
         </ng-container>
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;" ></tr>
