--- a/ClientApp/src/app/new-book/new-book.component.html
+++ b/ClientApp/src/app/new-book/new-book.component.html
@@ -28,8 +28,9 @@
       </div>
       <div class="col">
         <label for="type">Type</label>
-        <input class="form-control" type="text" [(ngModel)]="newBook.type" name="type" id="type"
-          placeholder="paperback, ebook, etc" />
+        <select class="form-control" [(ngModel)]="newBook.type" name="type" id="type">
+          <option *ngFor="let type of types" [value]="type">{{type}}</option>
+        </select>
       </div>
     </div>
     <div class="row">
