--- a/ClientApp/src/app/app.component.html
+++ b/ClientApp/src/app/app.component.html
@@ -1,6 +1,7 @@
 <body>
   <app-nav-menu></app-nav-menu>
-  <div class="container">
+  <div role="main" class="container">
     <router-outlet></router-outlet>
   </div>
+  <footer class="footer"><span>Background image by <a href="https://unsplash.com/@pawel_czerwinski?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Paweł Czerwiński</a> on <a href="https://unsplash.com/@pawel_czerwinski?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span></footer>
 </body>
