--- a/ClientApp/src/app/book-table/book-table.component.html
+++ b/ClientApp/src/app/book-table/book-table.component.html
@@ -46,6 +46,12 @@
                 <button class="btn btn-sm btn-danger" (click)="deleteBook(book.id)">Delete</button>
             </td>
         </ng-container>
+        <ng-container matColumnDef="view">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
+            <td mat-cell *matCellDef="let book">
+                <button class="btn btn-sm btn-info" [routerLink]="['/book', book.id]">View</button>
+            </td>
+        </ng-container>
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;" ></tr>
     </table>
