Book is now just a simple book. changed edit to view

--- a/ClientApp/src/app/home/home.component.html
+++ b/ClientApp/src/app/home/home.component.html
@@ -21,15 +21,15 @@
   <div class="row">
     <div class="col-md-4">
       <h3>Reading Now</h3>
-      <app-book-list status="Am Reading"></app-book-list>
+      <app-book status="Am Reading"></app-book>
     </div>
     <div class="col-md-4">
       <h3>Reading Next</h3>
-      <app-book-list status="Wanna Read"></app-book-list>
+      <app-book status="Wanna Read"></app-book>
     </div>
     <div class="col-md-4">
       <h3>Wanna Buy!</h3>
-      <app-book-list status="Need to Buy"></app-book-list>
+      <app-book status="Need to Buy"></app-book>
     </div>
   </div>
 </div>
