--- a/ClientApp/src/app/book-list/book-list.component.html
+++ b/ClientApp/src/app/book-list/book-list.component.html
@@ -7,7 +7,7 @@
         <h6 class="card-subtitle mb-2 text-muted">{{b.author}}</h6>
         <h6 class="card-subtitle mb-2 text-muted">Series: {{b.series}}</h6>
         <h6 class="card-subtitle mb-2 text-muted">Status: {{b.status}}</h6>
-        <button class="btn btn-sm btn-info" [routerLink]="['/book', b.id]">Edit</button>
+        <button class="btn btn-sm btn-info" [routerLink]="['/book', b.id]">View</button>
         <button class="btn btn-sm btn-danger" (click)="deleteBook(b.id)">Delete</button>
       </div>
     </div>
