Removed unnecessary BookList.

--- a/ClientApp/src/app/book-table/book-table.component.html
+++ b/ClientApp/src/app/book-table/book-table.component.html
@@ -58,5 +58,5 @@
     <mat-paginator [pageSizeOptions]="[3, 6, 12]" showFirstLastButtons></mat-paginator>
 </div>
 
-<app-book-list [hidden]="searching" ></app-book-list>
+<app-book [hidden]="searching"></app-book>
 
