Just a little hope for the future

--- a/ClientApp/src/app/home/home.component.html
+++ b/ClientApp/src/app/home/home.component.html
@@ -14,6 +14,10 @@
     <li>Can view those lists on the home page!</li>
     <li>Buttons that match the design!!</li>
   </ul>
+  <p>Far Future Features!</p>
+  <ul>
+    <li>Enter the ISBN to add a book!</li>
+  </ul>
 </div>
 
 <div *ngIf="isAuthenticated | async">
