--- a/ClientApp/src/app/book-view/book-view.component.html
+++ b/ClientApp/src/app/book-view/book-view.component.html
@@ -1,7 +1,7 @@
 <!-- Do I want this?? -->
 <div class="card" style="width: 18rem;">
-  <h5 class="code card-title">{{book.title}}</h5>
-  <h6 class="card-subtitle mb-2 text-muted">{{book.author}}</h6>
+  <h5 class="card-title">{{book.title}}</h5>
+  <h6 class="card-subtitle mb-2">{{book.author}}</h6>
   <p class="card-text">{{book.genre}}</p>
   <p class="card-text">Form: {{book.type}}</p>
   <p class="card-text">Series: {{book.series}}</p>
