reduced some button styling code. editbook save routes back to bookview

--- a/ClientApp/src/app/book-view/book-view.component.css
+++ b/ClientApp/src/app/book-view/book-view.component.css
@@ -5,6 +5,12 @@ p {
     color: #021b33;
 } 
 
-button {
-    margin: 2%;
+.buttons {
+    margin-left: 22%;
 }
+
+.card {
+    background-color: #ffdbcd;
+    color: #f08080;
+}
+
