--- a/ClientApp/src/app/book/book.component.html
+++ b/ClientApp/src/app/book/book.component.html
@@ -5,7 +5,7 @@
             <h6 class="card-subtitle mb-2 text-muted">{{book.author}}</h6>
             <h6 class="card-subtitle mb-2 text-muted">Series: {{book.series}}</h6>
             <h6 class="card-subtitle mb-2 text-muted">Status: {{book.status}}</h6>
-            <button class="btn btn-sm btn-info" [routerLink]="['/book', book.id]">View</button>
+            <button class="btn btn-sm btn-ok" [routerLink]="['/book', book.id]">View</button>
         </div>
     </div>
 </div>
