--- a/ClientApp/src/app/new-book/new-book.component.html
+++ b/ClientApp/src/app/new-book/new-book.component.html
@@ -1,46 +1,47 @@
-<h3>Add a book to the catalog</h3>
-<div class="align-items-center">
-  <form>
-    <div class="row">
-      <div class="col">
-        <label for="title">Title</label>
-        <input class="form-control" type="text" [(ngModel)]="newBook.title" name="title" id="title" />
+<div class="card">
+  <h3>Add a book to the catalog</h3>
+  <div class="align-items-center">
+    <form>
+      <div class="row">
+        <div class="col">
+          <label for="title">Title</label>
+          <input class="form-control" type="text" [(ngModel)]="newBook.title" name="title" id="title" />
+        </div>
+        <div class="col">
+          <label for="author">Author</label>
+          <input class="form-control" type="text" [(ngModel)]="newBook.author" name="author" id="author" />
+        </div>
+        <div class="col">
+          <label for="genre">Genre</label>
+          <input class="form-control" type="text" [(ngModel)]="newBook.genre" name="genre" id="genre" />
+        </div>
       </div>
-      <div class="col">
-        <label for="author">Author</label>
-        <input class="form-control" type="text" [(ngModel)]="newBook.author" name="author" id="author" />
+      <div class="row">
+        <div class="col">
+          <label for="series">Series</label>
+          <input class="form-control" type="text" [(ngModel)]="newBook.series" name="series" id="series" />
+        </div>
+        <div class="col">
+          <label for="status">Status</label>
+          <select class="form-control" [(ngModel)]="newBook.status" name="status" id="status">
+            <option *ngFor="let stat of options" [value]="stat">{{stat}}</option>
+          </select>
+        </div>
+        <div class="col">
+          <label for="type">Type</label>
+          <select class="form-control" [(ngModel)]="newBook.type" name="type" id="type">
+            <option *ngFor="let type of types" [value]="type">{{type}}</option>
+          </select>
+        </div>
       </div>
-      <div class="col">
-        <label for="genre">Genre</label>
-        <input class="form-control" type="text" [(ngModel)]="newBook.genre" name="genre" id="genre" />
+      <div class="row">
+        <div class="col">
+          <label for="notes">Notes</label>
+          <textarea class="form-control" [(ngModel)]="newBook.notes" name="notes" id="notes" rows="3"></textarea>
+        </div>
       </div>
-    </div>
-    <div class="row">
-      <div class="col">
-        <label for="series">Series</label>
-        <input class="form-control" type="text" [(ngModel)]="newBook.series" name="series" id="series" />
-      </div>
-      <div class="col">
-        <label for="status">Status</label>
-        <select class="form-control" [(ngModel)]="newBook.status" name="status" id="status">
-          <option *ngFor="let stat of options" [value]="stat">{{stat}}</option>
-      </select>
-      </div>
-      <div class="col">
-        <label for="type">Type</label>
-        <select class="form-control" [(ngModel)]="newBook.type" name="type" id="type">
-          <option *ngFor="let type of types" [value]="type">{{type}}</option>
-        </select>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col">
-        <label for="notes">Notes</label>
-        <textarea class="form-control" [(ngModel)]="newBook.notes" name="notes" id="notes" rows="3"></textarea>
-      </div>
-    </div>
-  </form>
+      <button class="btn btn-ok" (click)="save()">Save</button>
+      <button class="btn btn-info" routerLink="/catalog">Catalog</button>
+    </form>
+  </div>
 </div>
-<button class="btn btn-warning" (click)="save()">Save</button>
-
-<button class="btn btn-info" routerLink="/catalog">Catalog</button>
