--- a/ClientApp/src/app/book-table/book-table.component.html
+++ b/ClientApp/src/app/book-table/book-table.component.html
@@ -49,13 +49,13 @@
         <ng-container matColumnDef="view">
             <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
             <td mat-cell *matCellDef="let book">
-                <button class="btn btn-sm btn-info" [routerLink]="['/book', book.id]">View</button>
+                <button class="btn btn-sm btn-ok" [routerLink]="['/book', book.id]">View</button>
             </td>
         </ng-container>
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;" ></tr>
     </table>
-    <mat-paginator [pageSizeOptions]="[3, 6, 12]" showFirstLastButtons></mat-paginator>
+    <mat-paginator [pageSizeOptions]="[6, 12]" showFirstLastButtons></mat-paginator>
 </div>
 
 <app-book [hidden]="searching"></app-book>
