--- a/ClientApp/src/styles.css
+++ b/ClientApp/src/styles.css
@@ -10,10 +10,13 @@ a:hover{
   color: #e01a76;
 }
 
-.btn-primary {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
+.btn-ok {
+  background-color: #021b33;
+  color: #ffdbcd;
+}
+
+.btn-ok:hover{
+  background-color: #e72c0a;
 }
 
 html, body { height: 100%; }
@@ -33,4 +36,10 @@ h5,h6 {
 footer {
   position: fixed;
   bottom: 0;
+}
+
+.card {
+  background-color: #ffdbcd;
+  color: #f08080;
+  width: 70%;
 }
