Got catalog books on a grid! more btn modding

--- a/ClientApp/src/app/new-book/new-book.component.html
+++ b/ClientApp/src/app/new-book/new-book.component.html
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card text-center">
   <h3>Add a book to the catalog</h3>
   <div class="align-items-center">
     <form>
