--- a/ClientApp/src/app/book-view/book-view.component.html
+++ b/ClientApp/src/app/book-view/book-view.component.html
@@ -1,5 +1,5 @@
 <!-- Do I want this?? -->
-<div class="card" style="width: 26rem;">
+<div class="card text-center" style="width: 26rem;">
   <h5 class="card-title">{{book.title}}</h5>
   <h6 class="card-subtitle mb-2">{{book.author}}</h6>
   <p class="card-text">{{book.genre}}</p>
