--- a/ClientApp/src/app/home/home.component.html
+++ b/ClientApp/src/app/home/home.component.html
@@ -25,7 +25,7 @@
     <div class="col-md-4">
       <h3>Reading Now</h3>
       <div *ngFor="let book of reading">
-        <div class="card" style="width: 18rem;">
+        <div class="card text-center" style="width: 18rem;">
           <div class="card-body">
             <h5 class="card-title">{{book.title}}</h5>
             <h6 class="card-subtitle mb-2 text-muted">{{book.author}}</h6>
@@ -39,7 +39,7 @@
     <div class="col-md-4">
       <h3>Reading Next</h3>
       <div *ngFor="let book of read">
-        <div class="card" style="width: 18rem;">
+        <div class="card text-center" style="width: 18rem;">
           <div class="card-body">
             <h5 class="card-title">{{book.title}}</h5>
             <h6 class="card-subtitle mb-2 text-muted">{{book.author}}</h6>
@@ -53,7 +53,7 @@
     <div class="col-md-4">
       <h3>Wanna Buy!</h3>
       <div *ngFor="let book of buy">
-        <div class="card" style="width: 18rem;">
+        <div class="card text-center" style="width: 18rem;">
           <div class="card-body">
             <h5 class="card-title">{{book.title}}</h5>
             <h6 class="card-subtitle mb-2 text-muted">{{book.author}}</h6>
