Cleanup and style adjustments

--- a/ClientApp/src/app/book/book.component.html
+++ b/ClientApp/src/app/book/book.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div *ngFor="let book of books" class="col-4 my-5">
+    <div *ngFor="let book of books" class="col-4 m-auto">
         <div class="card text-center">
             <div class="card-body">
                 <h5 class="card-title">{{book.title}}</h5>
