--- a/ClientApp/src/app/home/home.component.html
+++ b/ClientApp/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="!(isAuthenticated | async)">
-  <h1>Welcome to YOUR library!</h1>
+  <h1>Welcome to YOUR own library!</h1>
   <p>Current Features:</p>
   <ul>
     <li>Can add, update, and delete books!</li>
