--- a/ClientApp/src/app/book-table/book-table.component.html
+++ b/ClientApp/src/app/book-table/book-table.component.html
@@ -40,12 +40,6 @@
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
             <td mat-cell *matCellDef="let book">{{book.status}}</td>
         </ng-container>
-        <!-- <ng-container matColumnDef="delete">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
-            <td mat-cell *matCellDef="let book">
-                <button class="btn btn-sm btn-danger" (click)="deleteBook(book.id)">Delete</button>
-            </td>
-        </ng-container> -->
         <ng-container matColumnDef="view">
             <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
             <td mat-cell *matCellDef="let book">
@@ -55,7 +49,7 @@
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;" ></tr>
     </table>
-    <mat-paginator [pageSizeOptions]="[6, 12]" showFirstLastButtons></mat-paginator>
+    <mat-paginator color="accent" [pageSizeOptions]="[6, 12]" showFirstLastButtons></mat-paginator>
 </div>
 
 <app-book [hidden]="searching"></app-book>
